--- a/Scripts/create_csv.ipynb
+++ b/Scripts/create_csv.ipynb
@@ -35,17 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,13 +64,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 제외할 이미지 목록 읽기 함수\n",
+    "def read_exclude_list(file_path):\n",
+    "    exclude_images = set()\n",
+    "    if os.path.exists(file_path):\n",
+    "        with open(file_path, 'r') as f:\n",
+    "            for line in f:\n",
+    "                try:\n",
+    "                    # 문자열을 리스트로 변환\n",
+    "                    image_list = ast.literal_eval(line.strip())\n",
+    "                    # 리스트의 각 이미지를 set에 추가\n",
+    "                    exclude_images.update(image_list)\n",
+    "                except:\n",
+    "                    # 라인을 파싱할 수 없는 경우 무시\n",
+    "                    continue\n",
+    "    return exclude_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_data(base_directory, image_directories, excel_files, output_file):\n",
+    "    exclude_file_path1 = '차이_4이상.txt'\n",
+    "    exclude_file_path2 = 'nan_값_포함.txt'\n",
+    "    exclude_images = read_exclude_list(exclude_file_path1).union(read_exclude_list(exclude_file_path2))\n",
+    "    \n",
+    "    print(len(exclude_images))\n",
+    "    print(next(iter(exclude_images)))\n",
+    "\n",
     "    dataframes = []\n",
-    "    for file_path in excel_files:\n",
+    "    for grade, file_path in excel_files.items():\n",
     "        try:\n",
     "            header_row = find_header_row(file_path)\n",
     "            df = pd.read_excel(file_path, header=header_row)\n",
@@ -83,12 +114,14 @@
     "                df[column] = df[column].astype(float) * 2\n",
     "            \n",
     "            # '등급' 열을 기준으로 이미지 경로 설정\n",
-    "            df['image_path'] = df.apply(lambda row: os.path.join(image_directories[row['등급']], f\"{row['등급']}_{int(row['No']):06d}.jpg\"), axis=1)\n",
+    "            df['image_path'] = df.apply(lambda row: os.path.join(image_directories[grade], f\"{grade}_{int(row['No']):06d}.jpg\"), axis=1)\n",
     "            \n",
-    "            df = df[df['image_path'].apply(os.path.exists)]\n",
+    "            # 존재하는 이미지 파일만 필터링하고 제외 목록에 없는 이미지만 선택\n",
+    "            df = df[df['image_path'].apply(lambda x: os.path.exists(x) and os.path.basename(x) not in exclude_images)]\n",
     "            \n",
     "            # 유효한 파일 경로가 몇 개인지 로그 출력\n",
-    "            print(f\"Filtered valid image paths for {file_path}: {len(df)} / {len(df)}\")\n",
+    "            max_no = df['No'].max()\n",
+    "            print(f\"Filtered valid image paths for {grade}: {len(df)} / {max_no}\")\n",
     "            \n",
     "            dataframes.append(df)\n",
     "\n",
@@ -104,11 +137,17 @@
     "    # 필요한 열만 선택 (Total 포함)\n",
     "    all_data = all_data[['No', '등급', 'Marbling', 'Color', 'Texture', 'Surface_Moisture', 'Total', 'image_path']]\n",
     "    \n",
+    "    # '등급' 열의 모든 값 앞에 '등심' 추가\n",
+    "    all_data['등급'] = '등심' + all_data['등급'].astype(str)\n",
+    "\n",
     "    # '등급' 열 이름을 'grade'로 변경\n",
     "    all_data = all_data.rename(columns={'등급': 'grade'})\n",
     "    \n",
+    "    # image_path에서 '../' 제거\n",
+    "    all_data['image_path'] = all_data['image_path'].str.replace('../', '', 1)\n",
+    "\n",
     "    # CSV 파일로 저장\n",
-    "    all_data.to_csv(os.path.join(base_directory, output_file), index=False)\n",
+    "    all_data.to_csv(os.path.join('../dataset/', output_file), index=False)\n",
     "    print(f\"Data saved to {os.path.join(base_directory, output_file)}\")\n",
     "\n",
     "    return all_data"
@@ -116,12 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory = \"./meat_dataset/\"\n",
-    "label_directory = \"./meat_dataset/labels\"\n",
+    "base_directory = \"../dataset/meat_dataset/\"\n",
+    "label_directory = \"../dataset/meat_dataset/labels\"\n",
     "output_file = \"default.csv\"\n",
     "\n",
     "# 이미지 파일 경로 설정\n",
@@ -144,9 +183,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1604\n",
+      "등심1++_000140.jpg\n",
+      "Filtered valid image paths for 등심1++: 1745 / 2326\n",
+      "Filtered valid image paths for 등심1+: 1554 / 2122\n",
+      "Filtered valid image paths for 등심1: 1580 / 1922\n",
+      "Filtered valid image paths for 등심2: 995 / 1252\n",
+      "Filtered valid image paths for 등심3: 434 / 539\n",
+      "Data saved to ../dataset/meat_dataset/default.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1160/3144373245.py:54: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  all_data['image_path'] = all_data['image_path'].str.replace('../', '', 1)\n"
+     ]
+    }
+   ],
    "source": [
     "processed_data = process_data(base_directory, image_directories, excel_files, output_file)"
    ]
@@ -159,8 +221,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
