--- a/Scripts/create_csv.ipynb
+++ b/Scripts/create_csv.ipynb
@@ -113,6 +113,10 @@
     "                df = df[pd.to_numeric(df[column], errors='coerce').notnull()]\n",
     "                df[column] = df[column].astype(float) * 2\n",
     "            \n",
+    "            # 등심1에 대해서만 No 값 조정\n",
+    "            if grade == '등심1':\n",
+    "                df['No'] = df['No'].apply(lambda x: x - 1 if x > 103 else x)\n",
+    "\n",
     "            # '등급' 열을 기준으로 이미지 경로 설정\n",
     "            df['image_path'] = df.apply(lambda row: os.path.join(image_directories[grade], f\"{grade}_{int(row['No']):06d}.jpg\"), axis=1)\n",
     "            \n",
@@ -230,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
