수정사항 업로드

--- a/Scripts/create_csv.ipynb
+++ b/Scripts/create_csv.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
     "            columns_to_check = ['Marbling(마블링정도)', 'Color(색깔)', 'Texture(조직감)', 'Surface Moisture(표면육즙)', 'Total(기호도)']\n",
     "            for column in columns_to_check:\n",
     "                df = df[pd.to_numeric(df[column], errors='coerce').notnull()]\n",
-    "                df[column] = df[column].astype(float) * 2\n",
+    "#                 df[column] = df[column].astype(float) * 2\n",
     "            \n",
     "            # 등심1에 대해서만 No 값 조정\n",
     "            if grade == '등심1':\n",
@@ -159,13 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_directory = \"../dataset/meat_dataset/\"\n",
     "label_directory = \"../dataset/meat_dataset/labels\"\n",
-    "output_file = \"default.csv\"\n",
+    "output_file = \"1to5.csv\"\n",
     "\n",
     "# 이미지 파일 경로 설정\n",
     "image_directories = {\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,20 +195,20 @@
      "output_type": "stream",
      "text": [
       "1604\n",
-      "등심1++_000140.jpg\n",
+      "등심2_001147.jpg\n",
       "Filtered valid image paths for 등심1++: 1745 / 2326\n",
       "Filtered valid image paths for 등심1+: 1554 / 2122\n",
-      "Filtered valid image paths for 등심1: 1580 / 1922\n",
+      "Filtered valid image paths for 등심1: 1437 / 1921\n",
       "Filtered valid image paths for 등심2: 995 / 1252\n",
       "Filtered valid image paths for 등심3: 434 / 539\n",
-      "Data saved to ../dataset/meat_dataset/default.csv\n"
+      "Data saved to ../dataset/meat_dataset/1to5.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1160/3144373245.py:54: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/tmp/ipykernel_152209/4191139284.py:58: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  all_data['image_path'] = all_data['image_path'].str.replace('../', '', 1)\n"
      ]
     }
@@ -216,11 +216,18 @@
    "source": [
     "processed_data = process_data(base_directory, image_directories, excel_files, output_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv3",
+   "display_name": "PyTorch 2.2 (NGC 23.11/Python 3.10) on Backend.AI",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
