코드 수정 2차

--- a/Scripts/make_kde_csv.ipynb
+++ b/Scripts/make_kde_csv.ipynb
@@ -2,57 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "687f4749",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "새로운 CSV 파일이 생성되었습니다: ../dataset/kde_color_1211.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# 경로에 있는 CSV 파일 읽기\n",
-    "csv_path = '../dataset/only_new_1211.csv'  # CSV 파일 경로\n",
-    "data = pd.read_csv(csv_path)\n",
-    "\n",
-    "# 라벨과 등급에 따라 이미지 파일 매칭 함수 정의\n",
-    "def get_image_file(label, grade):\n",
-    "    # '등심' 제거 후 실제 등급 값 추출\n",
-    "    if grade.startswith(\"등심\"):\n",
-    "        grade = grade.replace(\"등심\", \"\")\n",
-    "    grade_mapping = {\n",
-    "        \"1++\": \"1++\",\n",
-    "        \"1+\": \"1+\",\n",
-    "        \"1\": \"1\",\n",
-    "        \"2\": \"2\",\n",
-    "        \"3\": \"3\"\n",
-    "    }\n",
-    "    if grade in grade_mapping:\n",
-    "        return f\"dataset/kde_graph_1211/kde_{label}_{grade_mapping[grade]}_grade.png\"\n",
-    "    return None\n",
-    "\n",
-    "# 사용자가 지정한 라벨\n",
-    "label = \"Color\"\n",
-    "\n",
-    "# kde_graph 열 생성\n",
-    "data['kde_graph'] = data['grade'].apply(lambda x: get_image_file(label, x))\n",
-    "\n",
-    "# 새 CSV 파일로 저장\n",
-    "output_csv_path = '../dataset/kde_color_1211.csv'  # 저장할 파일 경로\n",
-    "data.to_csv(output_csv_path, index=False)\n",
-    "\n",
-    "print(f\"새로운 CSV 파일이 생성되었습니다: {output_csv_path}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "e9e523a0",
    "metadata": {},
    "outputs": [
@@ -60,31 +10,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Marbling_2_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Marbling_1+_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Marbling_1_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Marbling_1++_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Marbling_3_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Color_2_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Color_1+_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Color_1_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Color_1++_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Color_3_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Texture_2_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Texture_1+_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Texture_1_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Texture_1++_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Texture_3_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Surface_Moisture_2_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Surface_Moisture_1+_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Surface_Moisture_1_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Surface_Moisture_1++_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Surface_Moisture_3_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Total_2_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Total_1+_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Total_1_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Total_1++_grade.png\n",
-      "Converted and saved: ../dataset/kde_graph_1211/kde_Total_3_grade.png\n"
+      "Could not process file kde_Marbling_1++_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Marbling_1++_grade.npy'\n",
+      "Could not process file kde_Marbling_1+_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Marbling_1+_grade.npy'\n",
+      "Could not process file kde_Marbling_1_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Marbling_1_grade.npy'\n",
+      "Could not process file kde_Marbling_2_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Marbling_2_grade.npy'\n",
+      "Could not process file kde_Marbling_3_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Marbling_3_grade.npy'\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Marbling_grades.png\n",
+      "Could not process file kde_Color_1++_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Color_1++_grade.npy'\n",
+      "Could not process file kde_Color_1+_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Color_1+_grade.npy'\n",
+      "Could not process file kde_Color_1_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Color_1_grade.npy'\n",
+      "Could not process file kde_Color_2_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Color_2_grade.npy'\n",
+      "Could not process file kde_Color_3_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Color_3_grade.npy'\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Color_grades.png\n",
+      "Could not process file kde_Texture_1++_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Texture_1++_grade.npy'\n",
+      "Could not process file kde_Texture_1+_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Texture_1+_grade.npy'\n",
+      "Could not process file kde_Texture_1_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Texture_1_grade.npy'\n",
+      "Could not process file kde_Texture_2_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Texture_2_grade.npy'\n",
+      "Could not process file kde_Texture_3_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Texture_3_grade.npy'\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Texture_grades.png\n",
+      "Could not process file kde_Surface_Moisture_1++_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Surface_Moisture_1++_grade.npy'\n",
+      "Could not process file kde_Surface_Moisture_1+_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Surface_Moisture_1+_grade.npy'\n",
+      "Could not process file kde_Surface_Moisture_1_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Surface_Moisture_1_grade.npy'\n",
+      "Could not process file kde_Surface_Moisture_2_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Surface_Moisture_2_grade.npy'\n",
+      "Could not process file kde_Surface_Moisture_3_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Surface_Moisture_3_grade.npy'\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Surface_Moisture_grades.png\n",
+      "Could not process file kde_Total_1++_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Total_1++_grade.npy'\n",
+      "Could not process file kde_Total_1+_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Total_1+_grade.npy'\n",
+      "Could not process file kde_Total_1_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Total_1_grade.npy'\n",
+      "Could not process file kde_Total_2_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Total_2_grade.npy'\n",
+      "Could not process file kde_Total_3_grade.npy: cannot identify image file '../dataset/ku_kde_norm_1213/kde_Total_3_grade.npy'\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Total_grades.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Marbling_1++_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Marbling_1+_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Marbling_1_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Marbling_2_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Marbling_3_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Color_1++_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Color_1+_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Color_1_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Color_2_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Color_3_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Texture_1++_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Texture_1+_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Texture_1_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Texture_2_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Texture_3_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Surface_Moisture_1++_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Surface_Moisture_1+_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Surface_Moisture_1_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Surface_Moisture_2_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Surface_Moisture_3_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Total_1++_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Total_1+_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Total_1_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Total_2_grade.png\n",
+      "Converted and saved: ../dataset/ku_kde_norm_1213/kde_Total_3_grade.png\n"
      ]
     }
    ],
@@ -92,7 +72,7 @@
     "import os\n",
     "from PIL import Image\n",
     "\n",
-    "def convert_images_to_grayscale(input_dir, output_dir):\n",
+    "def convert_images_to_grayscale(relative_path):\n",
     "    \"\"\"\n",
     "    Converts all images in a folder to grayscale and saves them to a new folder.\n",
     "    \n",
@@ -100,13 +80,11 @@
     "    - input_dir (str): Path to the folder containing the original images.\n",
     "    - output_dir (str): Path to the folder where grayscale images will be saved.\n",
     "    \"\"\"\n",
-    "    # Ensure output directory exists\n",
-    "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "    # Iterate over all files in the input directory\n",
-    "    for filename in os.listdir(input_dir):\n",
-    "        input_path = os.path.join(input_dir, filename)\n",
-    "        output_path = os.path.join(output_dir, filename)\n",
+    "    for filename in os.listdir(relative_path):\n",
+    "        input_path = os.path.join(relative_path, filename)\n",
+    "        output_path = os.path.join(relative_path, filename)\n",
     "        \n",
     "        try:\n",
     "            # Open the image and convert it to grayscale\n",
@@ -118,9 +96,61 @@
     "            print(f\"Could not process file {filename}: {e}\")\n",
     "\n",
     "# Example usage\n",
-    "input_folder = '../dataset/kde_graph_1211/'\n",
-    "output_folder = '../dataset/kde_graph_1211/'\n",
-    "convert_images_to_grayscale(input_folder, output_folder)\n"
+    "kde_graph_path = 'dataset/ku_kde_norm_1213/'\n",
+    "relative_path = '../' + kde_graph_path\n",
+    "convert_images_to_grayscale(relative_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "687f4749",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "새로운 CSV 파일이 생성되었습니다: ../dataset/kde_marbling_1213.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 라벨과 등급에 따라 이미지 파일 매칭 함수 정의\n",
+    "def get_image_file(label, grade, kde_graph_path):\n",
+    "    # '등심' 제거 후 실제 등급 값 추출\n",
+    "    if grade.startswith(\"등심\"):\n",
+    "        grade = grade.replace(\"등심\", \"\")\n",
+    "    grade_mapping = {\n",
+    "        \"1++\": \"1++\",\n",
+    "        \"1+\": \"1+\",\n",
+    "        \"1\": \"1\",\n",
+    "        \"2\": \"2\",\n",
+    "        \"3\": \"3\"\n",
+    "    }\n",
+    "    if grade in grade_mapping:\n",
+    "        return f\"{kde_graph_path}/kde_{label}_{grade_mapping[grade]}_grade.png\"\n",
+    "    return None\n",
+    "\n",
+    "# 사용자가 지정한 라벨\n",
+    "label = \"Marbling\"\n",
+    "\n",
+    "# 경로에 있는 CSV 파일 읽기\n",
+    "csv_path = '../dataset/default_1213_fixed.csv'  # CSV 파일 경로\n",
+    "kde_graph_path = 'dataset/ku_kde_norm_1213'\n",
+    "data = pd.read_csv(csv_path)\n",
+    "\n",
+    "# kde_graph 열 생성\n",
+    "data['kde_graph'] = data['grade'].apply(lambda x: get_image_file(label, x, kde_graph_path))\n",
+    "\n",
+    "\n",
+    "# 새 CSV 파일로 저장\n",
+    "output_csv_path = '../dataset/kde_marbling_1213.csv'  # 저장할 파일 경로\n",
+    "data.to_csv(output_csv_path, index=False)\n",
+    "\n",
+    "print(f\"새로운 CSV 파일이 생성되었습니다: {output_csv_path}\")\n"
    ]
   }
  ],
