--- a/Scripts/create_train_val_csv.ipynb
+++ b/Scripts/create_train_val_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0f808faa",
    "metadata": {},
    "outputs": [],
@@ -51,8 +51,8 @@
     "    train_folds = add_flipped_images_to_dataset(train_folds, grade=flip_grade)\n",
     "    \n",
     "    # Train과 Validation 세트를 각각 파일로 저장\n",
-    "    train_folds.to_csv(f\"{save_path}/1211_train_4.csv\", index=False)\n",
-    "    val_fold.to_csv(f\"{save_path}/1211_val_1.csv\", index=False)\n",
+    "    train_folds.to_csv(f\"{save_path}/1213_train_4.csv\", index=False)\n",
+    "    val_fold.to_csv(f\"{save_path}/1213_val_1.csv\", index=False)\n",
     "    \n",
     "    print(\"Train and Validation CSV files saved.\")\n",
     "\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "c4879b4c",
    "metadata": {},
    "outputs": [
@@ -85,13 +85,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added flipped images for 등심3. Original count: 29, New total for 등심3: 58\n",
+      "Added flipped images for 등심3. Original count: 347, New total for 등심3: 694\n",
       "Train and Validation CSV files saved.\n"
      ]
     }
    ],
    "source": [
-    "csv_path = '../dataset/only_new_1211.csv'\n",
+    "csv_path = '../dataset/default_1213_fixed.csv'\n",
     "csv = pd.read_csv(csv_path)\n",
     "save_path = '../dataset'\n",
     "output_columns = [\"Marbling\", \"Color\", \"Texture\", \"Surface_Moisture\", \"Total\"]\n",
