--- a/Scripts/register_model.ipynb
+++ b/Scripts/register_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "71fdbe84",
    "metadata": {},
    "outputs": [
@@ -10,22 +10,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Registered model 'resnetv2.101x3' already exists. Creating a new version of this model...\n",
-      "2024/12/21 03:39:20 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: resnetv2.101x3, version 2\n"
+      "Successfully registered model 'resnetv2.101x3 1213'.\n",
+      "2024/12/22 14:25:13 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: resnetv2.101x3 1213, version 1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model registered with version: 2\n"
+      "Model registered with version: 1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created version '2' of model 'resnetv2.101x3'.\n"
+      "Created version '1' of model 'resnetv2.101x3 1213'.\n"
      ]
     }
    ],
@@ -36,14 +36,14 @@
     "# MLflow 서버 주소 설정\n",
     "mlflow.set_tracking_uri(\"http://0.0.0.0:5000\")\n",
     "\n",
-    "run_id = \"16455e1def7345e39e3bc46bb92b68bf\"  # run_id를 입력\n",
+    "run_id = \"ba1387f0337148eda2df58d2e7479458\"  # run_id를 입력\n",
     "artifact_path = \"best_model\"  # 저장된 모델 artifact path를 입력\n",
     "\n",
     "# 모델 경로\n",
     "model_uri = f\"runs:/{run_id}/{artifact_path}\"\n",
     "\n",
     "# 모델 등록을 위한 이름\n",
-    "registered_model_name = \"resnetv2.101x3\"\n",
+    "registered_model_name = \"resnetv2.101x3 1213\"\n",
     "\n",
     "# MLflow Client 생성\n",
     "client = MlflowClient()\n",
