--- a/models/model_test.ipynb
+++ b/models/model_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,330 @@
     "    sys.path.append(directory_to_add)\n",
     "\n",
     "print(f\"Added to sys.path: {absolute_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlflow.set_tracking_uri('http://0.0.0.0:5000')\n",
+    "model_uri = f\"runs:/5932e2435fa54971b9d3e43819be73cb/best_model\"\n",
+    "\n",
+    "model = mlflow.pytorch.load_model(model_uri).base_model.base_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SwinTransformer(\n",
+      "  (patch_embed): PatchEmbed(\n",
+      "    (proj): Conv2d(3, 96, kernel_size=(4, 4), stride=(4, 4))\n",
+      "    (norm): LayerNorm((96,), eps=1e-05, elementwise_affine=True)\n",
+      "  )\n",
+      "  (layers): Sequential(\n",
+      "    (0): SwinTransformerStage(\n",
+      "      (downsample): Identity()\n",
+      "      (blocks): Sequential(\n",
+      "        (0): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((96,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=96, out_features=288, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=96, out_features=96, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): Identity()\n",
+      "          (norm2): LayerNorm((96,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=96, out_features=384, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=384, out_features=96, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): Identity()\n",
+      "        )\n",
+      "        (1): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((96,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=96, out_features=288, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=96, out_features=96, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.009)\n",
+      "          (norm2): LayerNorm((96,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=96, out_features=384, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=384, out_features=96, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.009)\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "    (1): SwinTransformerStage(\n",
+      "      (downsample): PatchMerging(\n",
+      "        (norm): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "        (reduction): Linear(in_features=384, out_features=192, bias=False)\n",
+      "      )\n",
+      "      (blocks): Sequential(\n",
+      "        (0): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((192,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=192, out_features=576, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=192, out_features=192, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.018)\n",
+      "          (norm2): LayerNorm((192,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=192, out_features=768, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=768, out_features=192, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.018)\n",
+      "        )\n",
+      "        (1): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((192,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=192, out_features=576, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=192, out_features=192, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.027)\n",
+      "          (norm2): LayerNorm((192,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=192, out_features=768, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=768, out_features=192, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.027)\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "    (2): SwinTransformerStage(\n",
+      "      (downsample): PatchMerging(\n",
+      "        (norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "        (reduction): Linear(in_features=768, out_features=384, bias=False)\n",
+      "      )\n",
+      "      (blocks): Sequential(\n",
+      "        (0): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=384, out_features=1152, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=384, out_features=384, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.036)\n",
+      "          (norm2): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=384, out_features=1536, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=1536, out_features=384, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.036)\n",
+      "        )\n",
+      "        (1): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=384, out_features=1152, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=384, out_features=384, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.045)\n",
+      "          (norm2): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=384, out_features=1536, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=1536, out_features=384, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.045)\n",
+      "        )\n",
+      "        (2): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=384, out_features=1152, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=384, out_features=384, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.055)\n",
+      "          (norm2): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=384, out_features=1536, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=1536, out_features=384, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.055)\n",
+      "        )\n",
+      "        (3): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=384, out_features=1152, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=384, out_features=384, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.064)\n",
+      "          (norm2): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=384, out_features=1536, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=1536, out_features=384, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.064)\n",
+      "        )\n",
+      "        (4): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=384, out_features=1152, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=384, out_features=384, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.073)\n",
+      "          (norm2): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=384, out_features=1536, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=1536, out_features=384, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.073)\n",
+      "        )\n",
+      "        (5): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=384, out_features=1152, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=384, out_features=384, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.082)\n",
+      "          (norm2): LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=384, out_features=1536, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=1536, out_features=384, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.082)\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "    (3): SwinTransformerStage(\n",
+      "      (downsample): PatchMerging(\n",
+      "        (norm): LayerNorm((1536,), eps=1e-05, elementwise_affine=True)\n",
+      "        (reduction): Linear(in_features=1536, out_features=768, bias=False)\n",
+      "      )\n",
+      "      (blocks): Sequential(\n",
+      "        (0): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=768, out_features=768, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.091)\n",
+      "          (norm2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.091)\n",
+      "        )\n",
+      "        (1): SwinTransformerBlock(\n",
+      "          (norm1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "          (attn): WindowAttention(\n",
+      "            (qkv): Linear(in_features=768, out_features=2304, bias=True)\n",
+      "            (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (proj): Linear(in_features=768, out_features=768, bias=True)\n",
+      "            (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "            (softmax): Softmax(dim=-1)\n",
+      "          )\n",
+      "          (drop_path1): DropPath(drop_prob=0.100)\n",
+      "          (norm2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "          (mlp): Mlp(\n",
+      "            (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "            (act): GELU(approximate='none')\n",
+      "            (drop1): Dropout(p=0.0, inplace=False)\n",
+      "            (norm): Identity()\n",
+      "            (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "            (drop2): Dropout(p=0.0, inplace=False)\n",
+      "          )\n",
+      "          (drop_path2): DropPath(drop_prob=0.100)\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      "  (norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "  (head): ClassifierHead(\n",
+      "    (global_pool): SelectAdaptivePool2d(pool_type=avg, flatten=Identity())\n",
+      "    (drop): Dropout(p=0.0, inplace=False)\n",
+      "    (fc): Identity()\n",
+      "    (flatten): Identity()\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
    ]
   },
   {
